Updated styles on Report screen

--- a/MidnightHeist/report.htm
+++ b/MidnightHeist/report.htm
@@ -8,6 +8,15 @@
 		<link rel="stylesheet" href="css/report.css">
 		<script src="scripts/navigation.js"></script>
 		<script src="scripts/report.js"></script>
+
+
+		<style>
+			body {
+				background-image: url('images/869C707D-87FA-4463-99BE-54EE6F1C912C.jpg');
+				background-size: cover;
+			}
+		</style>
+
 	</head>
 
 	<body class="reportBody">
