--- a/MidnightHeist/steal.htm
+++ b/MidnightHeist/steal.htm
@@ -8,7 +8,7 @@
     <script src="scripts/stealTW.js"></script>
     <style>
         body {
-            background-image: url('c:\\Users\\udaya\\Desktop\\Rashmi\\MidnightHeist\\images\\IMG_2938.JPG');
+            background-image: url('images/DC906A9E-7758-416D-8000-408988EBD4E8.jpg');
             background-size: cover;
         }
     </style>
@@ -24,7 +24,7 @@
 	        <span class="cursor">&nbsp;</span>  
         </div>
 	    <div class="jump">
-		    <button id="jumpButton" class="choiceButton2" onclick="goToJumpCaught()">Jump</button>
+		    <button id="jumpButton" class="choiceButton2" onclick="goToJumpCaught()">Alley</button>
 	    </div>
 	    <div class="traffic">
 		    <button id="trafficButton" class="choiceButton1" onclick="goToTraffic()">Traffic</button>
